update main.bib, add refs in WSDM

--- a/main.bib
+++ b/main.bib
@@ -417,3 +417,422 @@
   biburl     = {https://dblp.org/rec/journals/corr/abs-2303-00709.bib},
   bibsource  = {dblp computer science bibliography, https://dblp.org}
 }
+
+% Nearly Linear Time Algorithm for Mean Hitting Times of Random Walks on a Graph
+
+@inproceedings{Ac01,
+	title={Database-friendly random projections},
+	author={Achlioptas, Dimitris},
+	booktitle={Proceedings of the twentieth ACM SIGMOD-SIGACT-SIGART Symposium on Principles of Database Systems},
+	pages={274--281},
+	year={2001},
+	organization={ACM}
+}
+
+@article{BaBaPaVe04,
+	Author = {Barrat, A and Barthelemy, M and Pastor-Satorras, R and Vespignani, A},
+	Title = {{The architecture of complex weighted networks}},
+	Journal = {{Proceedings of the National Academy of Sciences of the United States of America}},
+	Year = {{2004}},
+	Volume = {{101}},
+	Number = {{11}},
+	Pages = {{3747-3752}},
+	Month = {{MAR 16}},
+	Publisher = {{NATL ACAD SCIENCES}},
+	Address = {{2101 CONSTITUTION AVE NW, WASHINGTON, DC 20418 USA}},
+	Type = {{Article}},
+	Language = {{English}},
+	Affiliation = {{Vespignani, A (Reprint Author), Univ Paris 11, UMR CNRS 8627, Phys Theor Lab, Batiment 210, F-91405 Orsay, France.
+	Univ Paris 11, UMR CNRS 8627, Phys Theor Lab, F-91405 Orsay, France.
+	CEA, Dept Phys Theor \& Appl, F-91191 Gif Sur Yvette, France.
+	Univ Politecn Cataluna, Dept Fis \& Engn Nucl, ES-08034 Barcelona, Spain.}},
+	DOI = {{10.1073/pnas.0400087101}},
+	ISSN = {{0027-8424}},
+	Keywords-Plus = {{SMALL-WORLD NETWORKS; BETWEENNESS; CENTRALITY}},
+	Research-Areas = {{Science \& Technology - Other Topics}},
+	Web-of-Science-Categories  = {{Multidisciplinary Sciences}},
+	Author-Email = {{alexv@th.u-psud.fr}},
+	ResearcherID-Numbers = {{Vespignani, Alessandro/A-8794-2009
+	barthelemy, marc/B-3942-2008
+	Pastor-Satorras, Romualdo/L-8837-2013
+	}},
+	ORCID-Numbers = {{Pastor-Satorras, Romualdo/0000-0002-4051-6007
+	Vespignani, Alessandro/0000-0003-3419-4205}},
+	Number-of-Cited-References = {{24}},
+	Times-Cited = {{1543}},
+	Usage-Count-Last-180-days = {{10}},
+	Usage-Count-Since-2013 = {{228}},
+	Journal-ISO = {{Proc. Natl. Acad. Sci. U. S. A.}},
+	Doc-Delivery-Number = {{804QZ}},
+	Unique-ID = {{ISI:000220314500008}},
+	OA = {{gold\_or\_bronze}},
+	DA = {{2018-08-12}},
+}
+
+@book{BeGrTh74,
+  title={Generalized inverses: theory and applications},
+  author={Ben-Israel, Adi and Greville, Thomas N. E},
+  publisher={J. Wiley},
+  pages={406-413},
+  year={1974},
+}
+
+@article{Be09,
+	title={Centers for random walks on trees},
+	author={Beveridge, Andrew},
+	journal={SIAM Journal on Discrete Mathematics},
+	volume={23},
+	number={1},
+	pages={300--318},
+	year={2009},
+	publisher={SIAM}
+}
+
+@article{Be16,
+  title={A Hitting Time Formula for the Discrete {G}reen's Function},
+  author={Beveridge, Andrew},
+  journal={Combinatorics, Probability and Computing},
+  volume={25},
+  number={3},
+  pages={362--379},
+  year={2016},
+  publisher={Cambridge University Press}
+}
+
+@inproceedings{ChLiTa08,
+	title={Clustering via Random Walk Hitting Time on Directed Graphs},
+	author={Chen, M. and Liu, J.  Z. and Tang, X.},
+	booktitle={Proceedings of the Twenty-Third AAAI Conference on Artificial Intelligence},
+	pages={616--621},
+	year={2008},
+	organization={AAAI}
+}
+
+@book{Ch97,
+  title={Spectral Graph Theory},
+  author={Chung, Fan RK},
+  year={1997},
+  publisher={American Mathematical Society, Providence, RI}
+}
+
+@article{CoBeTeVoKl07,
+	title={First-passage times in complex scale-invariant media},
+	author={Condamin, S and B{\'e}nichou, O and Tejedor, V and Voituriez, R and Klafter, J},
+	journal={Nature},
+	volume={450},
+	number={7166},
+	pages={77-80},
+	year={2007},
+	publisher={Nature Publishing Group}
+}
+
+@book{DoLa84,
+	title={Random walks and electric networks},
+	author={Doyle, Peter G and Snell, J Laurie},
+	volume={22},
+	year={1984},
+	publisher={American Mathematical Soc.}
+}
+
+@article{FoPiReSa07,
+  title={Random-walk computation of similarities between nodes of a graph with application to collaborative recommendation},
+  author={Fouss, Francois and Pirotte, Alain and Renders, J-M and Saerens, Marco},
+  journal={IEEE Transactions on Knowledge and Data Engineering},
+  volume={19},
+  number={3},
+  pages={355--369},
+  year={2007},
+  publisher={IEEE}
+}
+
+@article{GhBoSa08,
+  title={Minimizing effective resistance of a graph},
+  author={Ghosh, Arpita and Boyd, Stephen and Saberi, Amin},
+  journal={SIAM Review},
+  volume={50},
+  number={1},
+  pages={37--66},
+  year={2008},
+  publisher={SIAM}
+}
+
+@article{Le06,
+  title={Random walks for image segmentation},
+  author={Grady, Leo},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  volume={28},
+  number={11},
+  pages={1768--1783},
+  year={2006},
+  publisher={IEEE}
+}
+
+@article{Hu06,
+	title={{Mixing times with applications to perturbed Markov chains}},
+	author={Hunter, Jeffrey J},
+	journal={Linear Algebra and its Applications},
+	volume={417},
+	number={1},
+	pages={108--123},
+	year={2006},
+	publisher={Elsevier}
+}
+
+@article{Hu14,
+  title={{The role of Kemeny's constant in properties of Markov chains}},
+  author={Hunter, Jeffrey J},
+  journal={Communications in Statistics ---  Theory and Methods},
+  volume={43},
+  number={7},
+  pages={1309--1321},
+  year={2014},
+  publisher={Taylor \& Francis}
+}
+
+@article{JaOl15,
+  title={Scaling Laws for Consensus Protocols Subject to Noise},
+  author={Ali Jadbabaie and Alexander Olshevsky},
+  journal={IEEE Transactions on Automatic Control},
+  year={2015},
+  volume={64},
+  pages={1389-1402}
+}
+
+@article{KlRa93,
+  title={Resistance distance},
+  author={Klein, Douglas J and Randi{\'c}, Milan},
+  journal={Journal of Mathematical Chemistry},
+  volume={12},
+  number={1},
+  pages={81--95},
+  year={1993},
+  publisher={Springer}
+}
+
+@inproceedings{KoMiPe11,
+  title={A nearly-$m$ log $n$ time solver for {SDD} linear systems},
+  author={Koutis, Ioannis and Miller, Gary L and Peng, Richard},
+  booktitle={Proc. IEEE 52nd Ann. Symp. Found. Comput. Sci.},
+  pages={590--598},
+  year={2011},
+  organization={IEEE}
+}
+
+@inproceedings{KySa16,
+	title={Approximate {G}aussian elimination for {L}aplacians-fast, sparse, and simple},
+	author={Kyng, Rasmus and Sachdeva, Sushant},
+	booktitle={Proceedings of the IEEE 57th Annual Symposium on Foundations of Computer Science},
+	pages={573--582},
+	year={2016},
+	organization={IEEE}
+}
+
+@article{LaDeBa14,
+  title={Random walks, Markov processes and the multiscale modular organization of complex networks},
+  author={Lambiotte, Renaud and Delvenne, Jean-Charles and Barahona, Mauricio},
+  journal={IEEE Transactions on Network Science and Engineering},
+  volume={1},
+  number={2},
+  pages={76--90},
+  year={2014},
+  publisher={IEEE}
+}
+
+@article{LeLo02,
+     title = {Kemeny's Constant and the Random Surfer},
+     author = {Levene, Mark and Loizou, George},
+     journal = {Am. Math. Mon.},
+     jstor_issuetitle = {},
+     volume = {109},
+     number = {8},
+     jstor_formatteddate = {Oct., 2002},
+     pages = {741-745},
+     ISSN = {00029890},
+     abstract = {},
+     language = {English},
+     year = {2002},
+     publisher = {Mathematical Association of America}
+}
+
+@book{LePeWi09,
+	title={{Markov Chains and Mixing Times}},
+	author={Levin, David Asher and Peres, Yuval and Wilmer, Elizabeth Lee},
+	year={2009},
+	publisher={American Mathematical Society, Providence, RI}
+}
+
+@inproceedings{LiSc18,
+	title={Spectral Subspace Sparsification},
+	author={Li, Huan and Schild, Aaron},
+	booktitle={Proceedings of 2018 IEEE 59th Annual Symposium on Foundations of Computer Science},
+	pages={385--396},
+	year={2018}
+	organization={IEEE}
+}
+
+@article{LiZh13PRE,
+  title={Random walks in weighted networks with a perfect trap: An application of {L}aplacian spectra},
+  author={Lin, Yuan and Zhang, Zhongzhi},
+  journal={Physical Review E},
+  volume={87},
+  number={6},
+  pages={062140},
+  year={2013},
+  publisher={APS}
+}
+
+@article{LiBr12,
+  title={{Lean algebraic multigrid (LAMG): Fast graph Laplacian linear solver}},
+  author={Livne, Oren E and Brandt, Achi},
+  journal={SIAM J. Sci. Comput.},
+  volume={34},
+  number={4},
+  pages={B499--B522},
+  year={2012},
+  publisher={SIAM}
+}
+
+@article{Lo93,
+	title={{Random walks on graphs: A survey}},
+	author={Lov{\'a}sz, L{\'a}szl{\'o}},
+	journal={Combinatorics, Paul Erd\"{o}s is eighty},
+	volume={2},
+	number={1},
+	pages={1--46},
+	year={1993}
+}
+
+@inproceedings{MeZhCh08,
+	title={Query suggestion using hitting time},
+	author={Mei, Qiaozhu and Zhou, Dengyong and Church, Kenneth},
+	booktitle={{Proceedings of the 17th ACM conference on Information and Knowledge Management}},
+	pages={469--478},
+	year={2008},
+	organization={ACM}
+}
+
+@article{Ne03,
+Author = {Newman, M. E. J.},
+Title = {{The structure and function of complex networks}},
+Journal = {{SIAM Rev.}},
+Year = {{2003}},
+Volume = {{45}},
+Number = {{2}},
+Pages = {{167-256}},
+Month = {{Jun.}},
+DOI = {{10.1137/S003614450342480}},
+ISSN = {{0036-1445}},
+}
+
+@article{Ne05,
+  title={A measure of betweenness centrality based on random walks},
+  author={Newman, Mark E. J.},
+  journal={Social Networks},
+  volume={27},
+  number={1},
+  pages={39--54},
+  year={2005},
+  publisher={Elsevier}
+}
+
+@article{PaAgBu15,
+	title={{Robotic surveillance and Markov chains with minimal weighted Kemeny constant}},
+	author={Patel, Rushabh and Agharkar, Pushkarini and Bullo, Francesco},
+	journal={IEEE Transatcions on Automatic Control},
+	volume={60},
+	number={12},
+	pages={3156--3167},
+	year={2015},
+	publisher={IEEE}
+}
+
+@article{SaDi12,
+  title={The impact of mobility on gossip algorithms},
+  author={Sarwate, Anand Dilip and Dimakis, Alexandros G},
+  journal={IEEE Transactoins on  Information Theory},
+  volume={58},
+  number={3},
+  pages={1731--1742},
+  year={2012},
+  publisher={IEEE}
+}
+
+@inproceedings{Sp10,
+  title={Algorithms, graph theory, and linear equations in Laplacian matrices},
+  author={Spielman, Daniel A},
+  booktitle={Proceedings of the International Congress of Mathematicians 2010 (ICM 2010) (In 4 Volumes) Vol. I: Plenary Lectures and Ceremonies Vols. II--IV: Invited Lectures},
+  pages={2698--2722},
+  year={2010},
+  organization={World Scientific}
+}
+
+@inproceedings{SpTe04,
+	title={Nearly-linear time algorithms for graph partitioning, graph sparsification, and solving linear systems},
+	author={Spielman, Daniel A and Teng, Shang-Hua},
+	booktitle={Proceedings of the thirty-sixth Annual ACM Symposium on Theory of Computing},
+	pages={81--90},
+	year={2004},
+	organization={ACM}
+}
+
+@article{TeBeVo09,
+	title={Global mean first-passage times of random walks on complex networks},
+	author={Tejedor, V and B{\'e}nichou, O and Voituriez, R},
+	journal={Physical Review E},
+	volume={80},
+	number={6},
+	pages={065104},
+	year={2009},
+	publisher={APS}
+}
+
+@article{Te91,
+	title={Random walks and the effective resistance of networks},
+	author={Tetali, Prasad},
+	journal={Journal of Theoretical Probability},
+	volume={4},
+	number={1},
+	pages={101--109},
+	year={1991},
+	publisher={Springer}
+}
+
+@inproceedings{WhSm03,
+	title={Algorithms for estimating relative importance in networks},
+	author={White, Scott and Smyth, Padhraic},
+	booktitle={Proceedings of the ninth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+	pages={266--275},
+	year={2003}
+}
+
+@article{WuZhCh11,
+	title={Random walks on dual {S}ierpi\'{n}ski gaskets},
+	author={Wu, Shunqi and Zhang, Zhongzhi and Chen, Guanrong},
+	journal={The European Physical Journal B},
+	volume={82},
+	number={1},
+	pages={91--96},
+	year={2011},
+	publisher={Springer}
+}
+
+@article{XiLiZh15,
+	title={{Spectrum of walk matrix for Koch network and its application}},
+	author={Xie, Pinchen and Lin, Yuan and Zhang, Zhongzhi},
+	journal={Journal of Chemical Physics},
+	volume={142},
+	number={22},
+	pages={224106},
+	year={2015},
+	publisher={AIP Publishing}
+}
+
+@article{XiZhCo16,
+	title={{On the spectrum of the normalized Laplacian of iterated triangulations of graphs}},
+	author={Xie, Pinchen and Zhang, Zhongzhi and Comellas, Francesc},
+	journal={Applied Mathematics and Computation},
+	volume={273},
+	pages={1123--1129},
+	year={2016},
+	publisher={Elsevier}
+}
